# Team_10_HackArizona

./: .env.example  .gitignore  Architecture.md  Problems_Encountered.md  Project_Plan.md  README.md  Stretch_Goals.md  build_slides.py  gemma_implementation.md  justfile  poster.html  slides.html  slides.pptx  test_AWS.py
api/: Dockerfile  pyproject.toml  railway.toml
api/app/: data_loader.py  db.py  main.py  model_loader.py  schemas.py
api/app/routes/: actuals.py  attributions.py  backtest.py  briefing.py  forecast.py  history.py  inputs.py  plants.py
ml/: .env.example  Dockerfile  justfile  plants.py  pyproject.toml  railway.toml  schemas.py
ml/data/artifacts/byron_1/: backtest_metrics.json  backtest_report.md  backtest_results.parquet  band_deltas.json  calibrator_h01.json  calibrator_h02.json  calibrator_h03.json  calibrator_h04.json  calibrator_h05.json  calibrator_h06.json  calibrator_h07.json  calibrator_h08.json  calibrator_h09.json  calibrator_h10.json  calibrator_h11.json  calibrator_h12.json  calibrator_h13.json  calibrator_h14.json  feature_columns.json  (+15 more)
ml/data/interim/: eia_nuclear_plants.parquet  features_byron_1.parquet  features_quad_cities_1.parquet  labels_byron_1.parquet  labels_quad_cities_1.parquet  nrc_power_status.parquet  water_byron_1.parquet  water_quad_cities_1.parquet  weather_byron_1.parquet  weather_quad_cities_1.parquet
ml/pipeline/: backtest.py  baselines.py  briefing.py  build_dataset.py  features.py  inference.py  ingest_eia.py  ingest_nrc.py  ingest_usgs.py  ingest_weather.py  llm.py  no_op.py  refresh.py  train.py
(+54 files in other folders)
