[project]
name = "derating-api"
version = "0.1.0"
description = "Nuclear cooling-water derating forecast API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "psycopg[binary]>=3.2",
]

[tool.uv]
package = false
